Entity Framework added

--- a/DotNetCoreExample/DotNetCoreExample/appsettings.json
+++ b/DotNetCoreExample/DotNetCoreExample/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DotNetCoreExampleContext": "Server=(localdb)\\mssqllocaldb;Database=DotNetCoreExampleContext-35e48c02-4a68-4771-ac88-842edc11bb96;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
